# Renderly

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: architecture.md  bridge-protocol.md  command-api.md  improvement-plan.md  mcp-agent-guide.md  preview-webview.md  project-schema.md  qa-checklist.md
renderly-app/: package-lock.json  package.json  vite.harness.config.ts
renderly-app/src/: App.tsx  main.tsx
renderly-app/src-tauri/: Cargo.toml  tauri.conf.json
renderly-app/src-tauri/icons/: icon.icns
renderly-app/src-tauri/src/: bridge.rs  lib.rs  playback.rs
renderly-app/src-tauri/src/preview/: gfx.rs  macos.rs  mod.rs  stub.rs  win32.rs
renderly-app/src-tauri/src/preview/linux/: mod.rs  wayland.rs  x11.rs
renderly-app/src/components/: ContextMenu.tsx  TopBar.tsx  WelcomeScreen.tsx
renderly-app/src/components/dialogs/: ExportDialog.tsx
renderly-app/src/components/inspector/: MediaClipInspector.tsx
renderly-app/src/components/leftpanel/: AudioPanel.tsx  MediaPanel.tsx
renderly-app/src/components/preview/: PerfHud.tsx  PreviewHandlesOverlay.tsx  PreviewMaskOverlay.tsx  PreviewPanel.tsx
renderly-app/src/components/timeline/: TimelineCanvas.tsx  TimelineToolbar.tsx  TrackHeaders.tsx
renderly-app/src/dev/: tauriMock.ts
renderly-app/src/lib/: actions.ts  ipc.ts  projectFlows.ts  theme.ts
renderly-app/src/preview/: WebviewPreview.tsx  webviewPreviewEngine.ts
renderly-app/src/store/: editorStore.ts
renderly-app/src/styles/: globals.css  tokens.css
renderly-app/src/timeline/: interactions.ts  layout.ts  renderer.ts  snap.ts  theme.ts
renderly-core/src/: lib.rs
renderly-core/src/compose/: eval.rs  mod.rs  transition.wgsl
renderly-core/src/export/: mod.rs
renderly-core/src/media/: ffmpeg_cli.rs  mod.rs
renderly-core/src/perceive/: mod.rs
renderly-mcp/: Cargo.toml
renderly-mcp/src/: bridge_client.rs  main.rs  server.rs
renderly-wasm/: Cargo.toml
renderly-wasm/src/: compositor.rs  lib.rs
