[package]
name = "renderly-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "wasm-bindgen bindings exposing renderly-core's GPU compositor to the webview preview (docs/preview-webview.md P2). Keeps wasm-bindgen out of renderly-core's default build."

[lib]
crate-type = ["cdylib", "rlib"]

# Everything real is wasm32-only: on the native target this crate compiles as an empty lib
# so `cargo build/test --workspace` stays green (see the workspace members comment).
[target.'cfg(target_arch = "wasm32")'.dependencies]
renderly-core = { workspace = true }
serde_json.workspace = true
uuid = { workspace = true, features = ["js"] }
wgpu = "30.0.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "HtmlVideoElement",
    "HtmlImageElement",
    "console",
] }
