[package]
name = "renderly-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tauri 2 desktop app for Renderly — Phase 2 GUI MVP."

[lib]
name = "renderly_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "renderly-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
renderly-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
parking_lot = "0.12.5"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
rodio = { version = "0.21", default-features = false, features = ["playback", "wav"] }
tokio = { version = "1", features = ["net", "sync", "macros", "rt-multi-thread", "time", "io-util"] }
tokio-tungstenite = "0.26"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
rand = "0.8"
json-patch = "4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
